--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
 
   --fw-small: 300;
@@ -10,29 +16,28 @@
 
 }
 
-*{
-  margin: 0;
-  padding: 0;
-}
-
 .nav-bar {
   padding: 22px 30px;
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 
 }
 
+section {
+  padding: 26px;
+}
+
 .hero {
   display: flex;
   flex-direction: column;
-  padding: 26px 36px;
 }
 
 .group-images {
   margin-bottom: 32px;
-  place-self: center;
+  max-width: 395px;
+  align-self: center;
 }
 
-.hero .title {
+.hero .header {
   font-size: 36px;
   font-weight: var(--fw-bold);
   margin-bottom: 16px;
