--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,52 @@ section {
   max-width: 320px;
 }
 
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
+
+.card {
+  width: 175px;
+  font-size: 12px;
+  flex: 0 0 auto;         /* ADD */
+  display: flex;          /* ADD */
+  flex-direction: column;
+}
+
+.card-image {
+  width: 100%;
+  border-radius: 9px;
+}
+
+.card-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card-price {
+  margin-top: auto;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.gray {
+  color: #918E9B;
+}
+
+.card-stats {
+  display: flex;
+  align-items: center;
+}
+
+.stats-star {
+  height: 14px;
+}
+
 @media (min-width:821px) {
   .group-images {   
     max-width: 400px;    
