--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
 *{
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
@@ -14,6 +12,10 @@
   font-weight: 400;  
   font-family : 'Poppins', sans-serif;
 
+}
+
+body {
+  margin: 0;
 }
 
 .nav-bar {
@@ -69,6 +71,7 @@ section {
 .card-image {
   width: 100%;
   border-radius: 9px;
+  margin-bottom: 9px;
 }
 
 .card-title {
