--- a/src/index.css
+++ b/src/index.css
@@ -63,9 +63,10 @@ section {
 .card {
   width: 175px;
   font-size: 12px;
-  flex: 0 0 auto;         /* ADD */
-  display: flex;          /* ADD */
+  flex: 0 0 auto;
+  display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .card-image {
@@ -98,6 +99,16 @@ section {
 
 .stats-star {
   height: 14px;
+}
+
+.card-badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
 
 @media (min-width:821px) {
